# rpclib

./: .gitignore  CMakeLists.txt
cmake/: msvc_support.cmake
examples/calculator/: CMakeLists.txt  calculator_client.cc  calculator_server.cc
include/rpc/: IPC.h  ITTProfiler.h  client.h  config.h  config.h.in  dispatcher.h  msgpack.hpp  rpc_error.h  server.h  this_handler.h  this_server.h  this_session.h
include/rpc/detail/: all.h  any.h  async_writer.h  bool.h  call.h  constant.h  dev_utils.h  func_tools.h  func_traits.h  if.h  invoke.h  is_specialization_of.h  log.h  make_unique.h  not.h  pimpl.h  response.h  server_session.h  thread_group.h  util.h
lib/rpc/: ITTProfiler.cpp  client.cc  dispatcher.cc  format.cc  posix.cc  rpc_error.cc  server.cc
lib/rpc/detail/: client_error.cc  server_session.cc
lib/rpc/platform/linux/: IPC.cpp
lib/rpc/platform/windows/: IPC.cpp
